Linked Join Page

--- a/src/pages/modules/styles/css/App.css
+++ b/src/pages/modules/styles/css/App.css
@@ -62,3 +62,11 @@ svg {
     scroll-behavior: auto !important;
   }
 }
+/* Custom CSS */
+.link {
+  color: inherit;
+  text-decoration: none;
+}
+.center {
+  align-self: center;
+}
